# nftest

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  foundry.toml
.github/workflows/: test.yml
script/: Deploy.s.sol  Reward.s.sol
src/: Reward.sol  RewardNFT.sol  main.rs
src/lib/: mod.rs
src/lib/core/: chain.rs  mod.rs  repository.rs  reward.rs
src/lib/models/: mod.rs  reward.rs  user.rs
src/lib/rewards/: example.rs  mod.rs
src/lib/services/: mod.rs  reward.rs  status.rs  user.rs
src/lib/storage/: sled.rs
src/lib/utils/: config.rs  helpers.rs  mod.rs  router.rs
test/: Deploy.t.sol  Reward.t.sol  RewardNFT.t.sol
tests/: client.rs  helpers.rs
