[package]
name = "nftest"
version = "0.1.0"
edition = "2021"

[dependencies.axum]
version = "0.7.4"

[dependencies.clap]
version = "4.5.0"
features = ["derive"]

[dependencies.config]
version = "0.14.0"
default-features = false
features = ["toml"]

[dependencies.ethers]
version = "2.0.13"

[dependencies.tokio]
version = "1.36.0"
features = ["full"]

[dependencies.serde]
version = "1.0.196"

[dependencies.serde_json]
version = "1.0.113"

[dependencies.zeroize]
version = "1.3.0"
features = ["std", "zeroize_derive"]
